--- a/notebooks/NoteBook.ipynb
+++ b/notebooks/NoteBook.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "0bc90ebd",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_835/2988573174.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/tmp/ipykernel_874/2988573174.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  browser = webdriver.Chrome(executable_path= DRIVER_PATH_chromedriver)\n"
      ]
     }
@@ -2070,7 +2070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "f26f61b1",
    "metadata": {
     "scrolled": true
@@ -2080,7 +2080,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_835/2556005668.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/tmp/ipykernel_874/1079680961.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  browser = webdriver.Chrome(executable_path= DRIVER_PATH_chromedriver)\n"
      ]
     },
@@ -2529,7 +2529,7 @@
        "30          0  https://www.amazon.com/s?bbn=154606011&rh=n%3A...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2557,7 +2557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "5ff64423",
    "metadata": {
     "scrolled": true
@@ -2662,7 +2662,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>436</th>\n",
+       "      <th>437</th>\n",
        "      <td>Central &amp; South America</td>\n",
        "      <td>Travel</td>\n",
        "      <td>1</td>\n",
@@ -2673,7 +2673,7 @@
        "      <td>https://www.amazon.com/s?bbn=159936011&amp;rh=n%3A...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>437</th>\n",
+       "      <th>438</th>\n",
        "      <td>Europe</td>\n",
        "      <td>Travel</td>\n",
        "      <td>1</td>\n",
@@ -2684,7 +2684,7 @@
        "      <td>https://www.amazon.com/s?bbn=159936011&amp;rh=n%3A...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>438</th>\n",
+       "      <th>439</th>\n",
        "      <td>Middle East</td>\n",
        "      <td>Travel</td>\n",
        "      <td>1</td>\n",
@@ -2695,7 +2695,7 @@
        "      <td>https://www.amazon.com/s?bbn=159936011&amp;rh=n%3A...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>439</th>\n",
+       "      <th>440</th>\n",
        "      <td>Polar Regions</td>\n",
        "      <td>Travel</td>\n",
        "      <td>1</td>\n",
@@ -2706,7 +2706,7 @@
        "      <td>https://www.amazon.com/s?bbn=159936011&amp;rh=n%3A...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>440</th>\n",
+       "      <th>441</th>\n",
        "      <td>United States</td>\n",
        "      <td>Travel</td>\n",
        "      <td>1</td>\n",
@@ -2718,7 +2718,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>441 rows × 8 columns</p>\n",
+       "<p>442 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2729,11 +2729,11 @@
        "3                    Fashion  Arts & Photography      1      0      0      0   \n",
        "4             Graphic Design  Arts & Photography      1      0      0      0   \n",
        "..                       ...                 ...    ...    ...    ...    ...   \n",
-       "436  Central & South America              Travel      1      0      0      0   \n",
-       "437                   Europe              Travel      1      0      0      0   \n",
-       "438              Middle East              Travel      1      0      0      0   \n",
-       "439            Polar Regions              Travel      1      0      0      0   \n",
-       "440            United States              Travel      1      0      0      0   \n",
+       "437  Central & South America              Travel      1      0      0      0   \n",
+       "438                   Europe              Travel      1      0      0      0   \n",
+       "439              Middle East              Travel      1      0      0      0   \n",
+       "440            Polar Regions              Travel      1      0      0      0   \n",
+       "441            United States              Travel      1      0      0      0   \n",
        "\n",
        "     cat final                                                url  \n",
        "0            0  https://www.amazon.com/s?bbn=154607011&rh=n%3A...  \n",
@@ -2742,16 +2742,16 @@
        "3            0  https://www.amazon.com/s?bbn=154607011&rh=n%3A...  \n",
        "4            0  https://www.amazon.com/s?bbn=154607011&rh=n%3A...  \n",
        "..         ...                                                ...  \n",
-       "436          0  https://www.amazon.com/s?bbn=159936011&rh=n%3A...  \n",
        "437          0  https://www.amazon.com/s?bbn=159936011&rh=n%3A...  \n",
        "438          0  https://www.amazon.com/s?bbn=159936011&rh=n%3A...  \n",
        "439          0  https://www.amazon.com/s?bbn=159936011&rh=n%3A...  \n",
        "440          0  https://www.amazon.com/s?bbn=159936011&rh=n%3A...  \n",
+       "441          0  https://www.amazon.com/s?bbn=159936011&rh=n%3A...  \n",
        "\n",
-       "[441 rows x 8 columns]"
+       "[442 rows x 8 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2775,7 +2775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "id": "52b269d7",
    "metadata": {},
    "outputs": [
@@ -2980,7 +2980,7 @@
        "[3124 rows x 8 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3004,17 +3004,279 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "df897e28",
+   "execution_count": 10,
+   "id": "e95310c5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "toto\n"
+     ]
+    }
+   ],
    "source": [
-    "dataframe.to_csv(\"dataframe_cat1.csv\")"
+    "browser.get('https://www.amazon.com/s?bbn=159983011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A159936011%2Cn%3A159982011%2Cn%3A159983011%2Cn%3A159984011&dc&qid=1658469739&rnid=159983011&ref=lp_159983011_nr_n_0')\n",
+    "html_page_listing = browser.page_source # permet de prendre le code html de la page \n",
+    "soup = BeautifulSoup(html_page_listing , 'lxml') # créer la soupe avec le parser\n",
+    "categories = soup.find_all('li'  , class_ = 'a-spacing-micro apb-browse-refinements-indent-2')\n",
+    "if categories == []:\n",
+    "    print('toto')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
+   "id": "5800b949",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9d83579d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name categorie</th>\n",
+       "      <th>cat 1</th>\n",
+       "      <th>cat 2</th>\n",
+       "      <th>cat 3</th>\n",
+       "      <th>cat 4</th>\n",
+       "      <th>cat 5</th>\n",
+       "      <th>cat final</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Architects, A-Z</td>\n",
+       "      <td>Arts &amp; Photography</td>\n",
+       "      <td>Architecture</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>finale</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=159982011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Religious Buildings</td>\n",
+       "      <td>Arts &amp; Photography</td>\n",
+       "      <td>Building Types &amp; Styles</td>\n",
+       "      <td>Arts &amp; Photography</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=157632011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Specific Styles</td>\n",
+       "      <td>Arts &amp; Photography</td>\n",
+       "      <td>Building Types &amp; Styles</td>\n",
+       "      <td>Arts &amp; Photography</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=157632011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Criticism</td>\n",
+       "      <td>Arts &amp; Photography</td>\n",
+       "      <td>Architecture</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>finale</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=157632011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Drawing &amp; Modelling</td>\n",
+       "      <td>Arts &amp; Photography</td>\n",
+       "      <td>Architecture</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>finale</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=157632011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5895</th>\n",
+       "      <td>Washington</td>\n",
+       "      <td>Travel</td>\n",
+       "      <td>States</td>\n",
+       "      <td>Travel</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=160000011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5896</th>\n",
+       "      <td>West Virginia</td>\n",
+       "      <td>Travel</td>\n",
+       "      <td>States</td>\n",
+       "      <td>Travel</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=160000011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5897</th>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>Travel</td>\n",
+       "      <td>States</td>\n",
+       "      <td>Travel</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=160000011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5898</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>Travel</td>\n",
+       "      <td>States</td>\n",
+       "      <td>Travel</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=160000011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5899</th>\n",
+       "      <td>Washington, D.C.</td>\n",
+       "      <td>Travel</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>finale</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=160000011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5900 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Name categorie              cat 1                     cat 2  \\\n",
+       "0         Architects, A-Z  Arts & Photography             Architecture   \n",
+       "1     Religious Buildings  Arts & Photography  Building Types & Styles   \n",
+       "2         Specific Styles  Arts & Photography  Building Types & Styles   \n",
+       "3               Criticism  Arts & Photography             Architecture   \n",
+       "4     Drawing & Modelling  Arts & Photography             Architecture   \n",
+       "...                   ...                 ...                      ...   \n",
+       "5895           Washington              Travel                   States   \n",
+       "5896        West Virginia              Travel                   States   \n",
+       "5897            Wisconsin              Travel                   States   \n",
+       "5898              Wyoming              Travel                   States   \n",
+       "5899     Washington, D.C.              Travel            United States   \n",
+       "\n",
+       "                   cat 3  cat 4  cat 5 cat final  \\\n",
+       "0                      1      0      0    finale   \n",
+       "1     Arts & Photography      0      0         0   \n",
+       "2     Arts & Photography      0      0         0   \n",
+       "3                      1      0      0    finale   \n",
+       "4                      1      0      0    finale   \n",
+       "...                  ...    ...    ...       ...   \n",
+       "5895              Travel      0      0         0   \n",
+       "5896              Travel      0      0         0   \n",
+       "5897              Travel      0      0         0   \n",
+       "5898              Travel      0      0         0   \n",
+       "5899                   1      0      0    finale   \n",
+       "\n",
+       "                                                    url  \n",
+       "0     https://www.amazon.com/s?bbn=159982011&rh=n%3A...  \n",
+       "1     https://www.amazon.com/s?bbn=157632011&rh=n%3A...  \n",
+       "2     https://www.amazon.com/s?bbn=157632011&rh=n%3A...  \n",
+       "3     https://www.amazon.com/s?bbn=157632011&rh=n%3A...  \n",
+       "4     https://www.amazon.com/s?bbn=157632011&rh=n%3A...  \n",
+       "...                                                 ...  \n",
+       "5895  https://www.amazon.com/s?bbn=160000011&rh=n%3A...  \n",
+       "5896  https://www.amazon.com/s?bbn=160000011&rh=n%3A...  \n",
+       "5897  https://www.amazon.com/s?bbn=160000011&rh=n%3A...  \n",
+       "5898  https://www.amazon.com/s?bbn=160000011&rh=n%3A...  \n",
+       "5899  https://www.amazon.com/s?bbn=160000011&rh=n%3A...  \n",
+       "\n",
+       "[5900 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#ici on attaque la quatrième itération\n",
+    "listing_categories_cat4=[]\n",
+    "for i in range(len(listing_categories_cat3)) :\n",
+    "    browser.get(listing_categories_cat3[i][7])\n",
+    "    html_page_listing = browser.page_source # permet de prendre le code html de la page \n",
+    "    soup = BeautifulSoup(html_page_listing , 'lxml') # créer la soupe avec le parser\n",
+    "    categories = soup.find_all('li'  , class_ = 'a-spacing-micro apb-browse-refinements-indent-2')\n",
+    "    # première descente des catégories simple il suffit de le la première page pas de boucle\n",
+    "    if categories==[]:\n",
+    "        listing_categories_cat4.append([listing_categories_cat3[i][0],listing_categories_cat3[i][1],listing_categories_cat3[i][2] ,listing_categories_cat3[i][3] ,0,0,\"finale\",lien])\n",
+    "    for categorie in categories :  \n",
+    "        categor = categorie.span.text.strip()\n",
+    "        lien = 'https://www.amazon.com'+ categorie.a.get('href')\n",
+    "        listing_categories_cat4.append([categor,listing_categories_cat3[i][1],listing_categories_cat3[i][0] ,listing_categories_cat3[i][1] ,0,0,0,lien])\n",
+    "dataframe_cat4 = pd.DataFrame(listing_categories_cat4,columns= index)\n",
+    "dataframe_cat4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "df897e28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataframe1.to_csv(\"dataframe_cat1.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "e0baede4",
    "metadata": {},
    "outputs": [],
@@ -3024,10 +3286,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "id": "394d57c9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dataframe3' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [14]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdataframe3\u001b[49m\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdataframe_cat3.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'dataframe3' is not defined"
+     ]
+    }
+   ],
    "source": [
     "dataframe3.to_csv(\"dataframe_cat3.csv\")"
    ]
@@ -3242,7 +3516,7 @@
     }
    ],
    "source": [
-    "dataframe.append(dataframe2)"
+    "dataframe4.to_csv(\"dataframe_cat4.csv\")"
    ]
   },
   {
