mise à jour panda en liste

--- a/notebooks/NoteBook.ipynb
+++ b/notebooks/NoteBook.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "fe34fa59",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "5e7fdf71",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "45739e9f",
    "metadata": {},
    "outputs": [],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "0bc90ebd",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_914/2988573174.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/tmp/ipykernel_832/2988573174.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  browser = webdriver.Chrome(executable_path= DRIVER_PATH_chromedriver)\n"
      ]
     }
@@ -221,6 +221,7 @@
    "cell_type": "markdown",
    "id": "7b8d00d9",
    "metadata": {
+    "heading_collapsed": true,
     "tags": []
    },
    "source": [
@@ -231,7 +232,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "d0807f82",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -301,7 +304,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "7c49eec7",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -328,7 +333,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "17a5c41d",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -349,7 +356,9 @@
    "cell_type": "code",
    "execution_count": 59,
    "id": "e37ba8e0",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "ename": "IndexError",
@@ -371,19 +380,25 @@
   {
    "cell_type": "markdown",
    "id": "07fa6918",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": []
   },
   {
    "cell_type": "markdown",
    "id": "c50236cb",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": []
   },
   {
    "cell_type": "markdown",
    "id": "786bf534",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Balayer le site pour trouver toute les catégories d'amazon ( création d'un super dictionnaire)"
    ]
@@ -392,7 +407,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "78d89128",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "url_architecture = 'https://www.amazon.com/s?bbn=154607011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A157630011&dc&qid=1657688632&rnid=154607011&ref=lp_154607011_nr_n_0'\n",
@@ -403,7 +420,9 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "19e7c81c",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "ename": "KeyboardInterrupt",
@@ -445,7 +464,9 @@
    "cell_type": "code",
    "execution_count": 30,
    "id": "9044ede6",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -466,7 +487,9 @@
    "cell_type": "code",
    "execution_count": 31,
    "id": "e9eb167e",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "for l in dictionnaire_master:\n",
@@ -479,7 +502,9 @@
    "cell_type": "code",
    "execution_count": 32,
    "id": "ed728c64",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -500,7 +525,9 @@
    "cell_type": "code",
    "execution_count": 33,
    "id": "dc484eb0",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1521,7 +1548,9 @@
    "cell_type": "code",
    "execution_count": 55,
    "id": "2c46f92e",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1571,6 +1600,7 @@
    "execution_count": 52,
    "id": "adce72c8",
    "metadata": {
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -1636,7 +1666,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "217bbde6",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "#faire un programme qui mets à jour le dictionnaire tant que le dictionnaire est modifié , on continue\n",
@@ -1650,6 +1682,7 @@
    "execution_count": 8,
    "id": "26f02b74",
    "metadata": {
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -1727,7 +1760,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5d656679",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "index = [cat 1 ','cat 2','cat 3','cat 4', 'cat 5' ,'cat final','url']"
@@ -1737,7 +1772,9 @@
    "cell_type": "code",
    "execution_count": 118,
    "id": "8d1159fd",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1813,6 +1850,7 @@
    "execution_count": 119,
    "id": "d0276112",
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -1898,7 +1936,9 @@
    "cell_type": "code",
    "execution_count": 81,
    "id": "e6e50e96",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "browser.get(df['url'][0][0:1][0])"
@@ -1908,7 +1948,9 @@
    "cell_type": "code",
    "execution_count": 111,
    "id": "d0f0a8b8",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "listing = []"
@@ -1918,7 +1960,9 @@
    "cell_type": "code",
    "execution_count": 120,
    "id": "9f940fab",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "listing  = architecture"
@@ -1928,7 +1972,9 @@
    "cell_type": "code",
    "execution_count": 121,
    "id": "ddb61605",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1956,7 +2002,9 @@
    "cell_type": "code",
    "execution_count": 122,
    "id": "16be4848",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "listing= architecture + arts_and_photo"
@@ -1966,7 +2014,9 @@
    "cell_type": "code",
    "execution_count": 129,
    "id": "4022cc12",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "for i in range(len(listing)) : # petite fonction pour vérifieer que l'on peu accéder facilement aux url \n",
@@ -1978,6 +2028,7 @@
    "execution_count": 124,
    "id": "4b125075",
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1990,6 +2041,7 @@
    "execution_count": 125,
    "id": "c7d31ef0",
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -2080,7 +2132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "id": "f26f61b1",
    "metadata": {
     "scrolled": true
@@ -2090,7 +2142,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_914/2143826211.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/tmp/ipykernel_832/3080079371.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  browser = webdriver.Chrome(executable_path= DRIVER_PATH_chromedriver)\n"
      ]
     },
@@ -2440,7 +2492,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                            cat 1   cat 2  cat 3  cat 4  cat 5  cat final  \\\n",
+       "                             cat 1  cat 2  cat 3  cat 4  cat 5  cat final  \\\n",
        "0               Arts & Photography      0      0      0      0          0   \n",
        "1            Biographies & Memoirs      0      0      0      0          0   \n",
        "2                 Business & Money      0      0      0      0          0   \n",
@@ -2507,7 +2559,7 @@
        "30  https://www.amazon.com/s?bbn=154606011&rh=n%3A...  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2515,7 +2567,7 @@
    "source": [
     "DRIVER_PATH_chromedriver = str(Path('../chromedriver').resolve())\n",
     "browser = webdriver.Chrome(executable_path= DRIVER_PATH_chromedriver)\n",
-    "index = ['cat 1 ','cat 2','cat 3','cat 4', 'cat 5' ,'cat final','url']\n",
+    "index = ['cat 1','cat 2','cat 3','cat 4', 'cat 5' ,'cat final','url']\n",
     "# Create the pandas DataFrame\n",
     "browser.get(url_kindle_accueil)\n",
     "browser.get(url_kindle_accueil)\n",
@@ -2529,13 +2581,13 @@
     "    lien = 'https://www.amazon.com'+ categorie.a.get('href')\n",
     "    listing_categories_cat1.append([categor,0,0,0,0,0,lien])\n",
     "dataframe1 = pd.DataFrame(listing_categories_cat1,columns= index)\n",
-    "\n",
+    "dataframe1.to_csv('categories_cat1.csv')\n",
     "dataframe1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 50,
    "id": "5ff64423",
    "metadata": {
     "scrolled": true
@@ -2633,7 +2685,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>399</th>\n",
+       "      <th>437</th>\n",
        "      <td>Travel</td>\n",
        "      <td>Central &amp; South America</td>\n",
        "      <td>0</td>\n",
@@ -2643,7 +2695,7 @@
        "      <td>https://www.amazon.com/s?bbn=159936011&amp;rh=n%3A...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>400</th>\n",
+       "      <th>438</th>\n",
        "      <td>Travel</td>\n",
        "      <td>Europe</td>\n",
        "      <td>0</td>\n",
@@ -2653,7 +2705,7 @@
        "      <td>https://www.amazon.com/s?bbn=159936011&amp;rh=n%3A...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>401</th>\n",
+       "      <th>439</th>\n",
        "      <td>Travel</td>\n",
        "      <td>Middle East</td>\n",
        "      <td>0</td>\n",
@@ -2663,7 +2715,7 @@
        "      <td>https://www.amazon.com/s?bbn=159936011&amp;rh=n%3A...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>402</th>\n",
+       "      <th>440</th>\n",
        "      <td>Travel</td>\n",
        "      <td>Polar Regions</td>\n",
        "      <td>0</td>\n",
@@ -2673,7 +2725,7 @@
        "      <td>https://www.amazon.com/s?bbn=159936011&amp;rh=n%3A...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>403</th>\n",
+       "      <th>441</th>\n",
        "      <td>Travel</td>\n",
        "      <td>United States</td>\n",
        "      <td>0</td>\n",
@@ -2684,22 +2736,22 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>404 rows × 7 columns</p>\n",
+       "<p>442 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 cat 1                     cat 2  cat 3  cat 4  cat 5  \\\n",
+       "                  cat 1                    cat 2  cat 3  cat 4  cat 5  \\\n",
        "0    Arts & Photography             Architecture      0      0      0   \n",
        "1    Arts & Photography                      Art      0      0      0   \n",
        "2    Arts & Photography                    Dance      0      0      0   \n",
        "3    Arts & Photography                  Fashion      0      0      0   \n",
        "4    Arts & Photography           Graphic Design      0      0      0   \n",
        "..                  ...                      ...    ...    ...    ...   \n",
-       "399              Travel  Central & South America      0      0      0   \n",
-       "400              Travel                   Europe      0      0      0   \n",
-       "401              Travel              Middle East      0      0      0   \n",
-       "402              Travel            Polar Regions      0      0      0   \n",
-       "403              Travel            United States      0      0      0   \n",
+       "437              Travel  Central & South America      0      0      0   \n",
+       "438              Travel                   Europe      0      0      0   \n",
+       "439              Travel              Middle East      0      0      0   \n",
+       "440              Travel            Polar Regions      0      0      0   \n",
+       "441              Travel            United States      0      0      0   \n",
        "\n",
        "     cat final                                                url  \n",
        "0            0  https://www.amazon.com/s?bbn=154607011&rh=n%3A...  \n",
@@ -2708,25 +2760,27 @@
        "3            0  https://www.amazon.com/s?bbn=154607011&rh=n%3A...  \n",
        "4            0  https://www.amazon.com/s?bbn=154607011&rh=n%3A...  \n",
        "..         ...                                                ...  \n",
-       "399          0  https://www.amazon.com/s?bbn=159936011&rh=n%3A...  \n",
-       "400          0  https://www.amazon.com/s?bbn=159936011&rh=n%3A...  \n",
-       "401          0  https://www.amazon.com/s?bbn=159936011&rh=n%3A...  \n",
-       "402          0  https://www.amazon.com/s?bbn=159936011&rh=n%3A...  \n",
-       "403          0  https://www.amazon.com/s?bbn=159936011&rh=n%3A...  \n",
+       "437          0  https://www.amazon.com/s?bbn=159936011&rh=n%3A...  \n",
+       "438          0  https://www.amazon.com/s?bbn=159936011&rh=n%3A...  \n",
+       "439          0  https://www.amazon.com/s?bbn=159936011&rh=n%3A...  \n",
+       "440          0  https://www.amazon.com/s?bbn=159936011&rh=n%3A...  \n",
+       "441          0  https://www.amazon.com/s?bbn=159936011&rh=n%3A...  \n",
        "\n",
-       "[404 rows x 7 columns]"
+       "[442 rows x 7 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# deuxième itération, il faut faire un boucle for sur le premier listing des catégories\n",
+    "\n",
+    "dataframe1 = pd.read_csv('categories_cat1.csv', index_col = 0) # on importe le dataframe depuis le csv\n",
     "listing_categories_cat2=[]\n",
-    "for i in range(len(listing_categories_cat1)) :\n",
-    "    browser.get(listing_categories_cat1[i][6])\n",
+    "for i in range(len(dataframe1)) :\n",
+    "    browser.get(dataframe1['url'][i])\n",
     "    html_page_listing = browser.page_source # permet de prendre le code html de la page \n",
     "    soup = BeautifulSoup(html_page_listing , 'lxml') # créer la soupe avec le parser\n",
     "    categories = soup.find_all('li'  , class_ = 'a-spacing-micro apb-browse-refinements-indent-2')\n",
@@ -2734,8 +2788,9 @@
     "    for categorie in categories :  \n",
     "        categor = categorie.span.text.strip()\n",
     "        lien = 'https://www.amazon.com'+ categorie.a.get('href')\n",
-    "        listing_categories_cat2.append([listing_categories_cat1[i][0],categor,0,0,0,0,lien])\n",
+    "        listing_categories_cat2.append([dataframe1['cat 1'][i],categor,0,0,0,0,lien])\n",
     "dataframe2 = pd.DataFrame(listing_categories_cat2,columns= index)\n",
+    "dataframe2.to_csv('categories_cat2.csv')\n",
     "dataframe2"
    ]
   },
@@ -2952,7 +3007,9 @@
     }
    ],
    "source": [
-    "# ici on attaque la ltroisième itération , on va descendre sur le même schéma que précédemment\n",
+    "# ici on attaque la ltroisième itération , on va descendre sur le même schéma que précédemment \n",
+    "# on va commencer à immaginer qu'une catégories puisse être finale c'est à dire qu'il n'y a pas de categroeis dans la soupe\n",
+    "\n",
     "listing_categories_cat3=[]\n",
     "for i in range(len(listing_categories_cat2)) :\n",
     "    browser.get(listing_categories_cat2[i][6])\n",
