--- a/notebooks/NoteBook.ipynb
+++ b/notebooks/NoteBook.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "fe34fa59",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "5e7fdf71",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "45739e9f",
    "metadata": {},
    "outputs": [],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "0bc90ebd",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1163/2940111159.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/tmp/ipykernel_792/2940111159.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  browser = webdriver.Chrome(executable_path= DRIVER_PATH_chromedriver)\n"
      ]
     }
@@ -2776,7 +2776,7 @@
     }
    ],
    "source": [
-    "# deuxième itération, il faut faire un boucle for sur le premier listing des catégories\n",
+    "# deuxième itération, il faut faire une boucle for sur le premier listing des catégories\n",
     "\n",
     "dataframe1 = pd.read_csv('categories_cat1.csv', index_col = 0) # on importe le dataframe depuis le csv\n",
     "listing_categories_cat2=[]\n",
@@ -2797,7 +2797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "2d7d7e4d",
    "metadata": {},
    "outputs": [
@@ -2977,7 +2977,7 @@
        "[442 rows x 7 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2990,7 +2990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "7d6ae48f",
    "metadata": {},
    "outputs": [],
@@ -3002,7 +3002,9 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "52b269d7",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "NameError",
@@ -3034,15 +3036,24 @@
     "        lien = 'https://www.amazon.com'+ categorie.a.get('href')\n",
     "        listing_categories_cat3.append([dataframe2['cat 1'][i],dataframe2['cat 2'][i],categor,0,0,0,lien]) \n",
     "dataframe_cat3 = pd.DataFrame(listing_categories_cat3,columns= index)\n",
+    "dataframe_cat3.to_csv('categories_cat3.csv')\n",
     "dataframe_cat3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "6bb3c022",
+   "execution_count": 44,
+   "id": "b7f158a4",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_792/4128034627.py:3: FutureWarning: Passing a dict as an indexer is deprecated and will raise in a future version. Use a list instead.\n",
+      "  dataframe_cat3[{'cat final':'finale'}]\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -3064,170 +3075,125 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>cat 1</th>\n",
-       "      <th>cat 2</th>\n",
-       "      <th>cat 3</th>\n",
-       "      <th>cat 4</th>\n",
-       "      <th>cat 5</th>\n",
        "      <th>cat final</th>\n",
-       "      <th>url</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Arts &amp; Photography</td>\n",
-       "      <td>Architecture</td>\n",
-       "      <td>Architects, A-Z</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>https://www.amazon.com/s?bbn=157630011&amp;rh=n%3A...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Arts &amp; Photography</td>\n",
-       "      <td>Architecture</td>\n",
-       "      <td>Building Types &amp; Styles</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>https://www.amazon.com/s?bbn=157630011&amp;rh=n%3A...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Arts &amp; Photography</td>\n",
-       "      <td>Architecture</td>\n",
-       "      <td>Criticism</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>https://www.amazon.com/s?bbn=157630011&amp;rh=n%3A...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Arts &amp; Photography</td>\n",
-       "      <td>Architecture</td>\n",
-       "      <td>Drawing &amp; Modelling</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>https://www.amazon.com/s?bbn=157630011&amp;rh=n%3A...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Arts &amp; Photography</td>\n",
-       "      <td>Architecture</td>\n",
-       "      <td>Historic Preservation</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>https://www.amazon.com/s?bbn=157630011&amp;rh=n%3A...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3259</th>\n",
-       "      <td>Travel</td>\n",
-       "      <td>Middle East</td>\n",
-       "      <td>Turkey</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>https://www.amazon.com/s?bbn=159976011&amp;rh=n%3A...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3260</th>\n",
-       "      <td>Travel</td>\n",
-       "      <td>Polar Regions</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>finale</td>\n",
-       "      <td>https://www.amazon.com/s?bbn=159976011&amp;rh=n%3A...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3261</th>\n",
-       "      <td>Travel</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>Regions</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>https://www.amazon.com/s?bbn=159982011&amp;rh=n%3A...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3262</th>\n",
-       "      <td>Travel</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>States</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>https://www.amazon.com/s?bbn=159982011&amp;rh=n%3A...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3263</th>\n",
-       "      <td>Travel</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>Washington, D.C.</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>https://www.amazon.com/s?bbn=159982011&amp;rh=n%3A...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3264 rows × 7 columns</p>\n",
+       "<p>3264 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   cat 1          cat 2                    cat 3  cat 4  \\\n",
-       "0     Arts & Photography   Architecture          Architects, A-Z      0   \n",
-       "1     Arts & Photography   Architecture  Building Types & Styles      0   \n",
-       "2     Arts & Photography   Architecture                Criticism      0   \n",
-       "3     Arts & Photography   Architecture      Drawing & Modelling      0   \n",
-       "4     Arts & Photography   Architecture    Historic Preservation      0   \n",
-       "...                  ...            ...                      ...    ...   \n",
-       "3259              Travel    Middle East                   Turkey      0   \n",
-       "3260              Travel  Polar Regions                        0      0   \n",
-       "3261              Travel  United States                  Regions      0   \n",
-       "3262              Travel  United States                   States      0   \n",
-       "3263              Travel  United States         Washington, D.C.      0   \n",
+       "     cat final\n",
+       "0            0\n",
+       "1            0\n",
+       "2            0\n",
+       "3            0\n",
+       "4            0\n",
+       "...        ...\n",
+       "3259         0\n",
+       "3260    finale\n",
+       "3261         0\n",
+       "3262         0\n",
+       "3263         0\n",
        "\n",
-       "      cat 5 cat final                                                url  \n",
-       "0         0         0  https://www.amazon.com/s?bbn=157630011&rh=n%3A...  \n",
-       "1         0         0  https://www.amazon.com/s?bbn=157630011&rh=n%3A...  \n",
-       "2         0         0  https://www.amazon.com/s?bbn=157630011&rh=n%3A...  \n",
-       "3         0         0  https://www.amazon.com/s?bbn=157630011&rh=n%3A...  \n",
-       "4         0         0  https://www.amazon.com/s?bbn=157630011&rh=n%3A...  \n",
-       "...     ...       ...                                                ...  \n",
-       "3259      0         0  https://www.amazon.com/s?bbn=159976011&rh=n%3A...  \n",
-       "3260      0    finale  https://www.amazon.com/s?bbn=159976011&rh=n%3A...  \n",
-       "3261      0         0  https://www.amazon.com/s?bbn=159982011&rh=n%3A...  \n",
-       "3262      0         0  https://www.amazon.com/s?bbn=159982011&rh=n%3A...  \n",
-       "3263      0         0  https://www.amazon.com/s?bbn=159982011&rh=n%3A...  \n",
-       "\n",
-       "[3264 rows x 7 columns]"
+       "[3264 rows x 1 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataframe_cat3 = pd.DataFrame(listing_categories_cat3,columns= index)\n",
-    "dataframe_cat3.to_csv('categories_cat3.csv')\n",
-    "dataframe_cat3"
+    "dict = {'cat final':\"finale\"}\n",
+    " # x = pd.DataFrame({'x': [1, 2, 3], 'y': [3, 4, 5]})\n",
+    "dataframe_cat3[{'cat final':'finale'}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "6bb3c022",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'lien' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [19]\u001b[0m, in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# première descente des catégories simple il suffit de le la première page pas de boucle\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m categories \u001b[38;5;241m==\u001b[39m [] : \n\u001b[0;32m---> 12\u001b[0m     listing_categories_cat4\u001b[38;5;241m.\u001b[39mappend([dataframe_cat3[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcat 1\u001b[39m\u001b[38;5;124m'\u001b[39m][i],dataframe_cat3[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcat 2\u001b[39m\u001b[38;5;124m'\u001b[39m][i],dataframe_cat3[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcat 3\u001b[39m\u001b[38;5;124m'\u001b[39m][i],\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfinale\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[43mlien\u001b[49m]) \n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m categorie \u001b[38;5;129;01min\u001b[39;00m categories :  \n\u001b[1;32m     14\u001b[0m     categor \u001b[38;5;241m=\u001b[39m categorie\u001b[38;5;241m.\u001b[39mspan\u001b[38;5;241m.\u001b[39mtext\u001b[38;5;241m.\u001b[39mstrip()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'lien' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "dataframe_cat3 = pd.read_csv('categories_cat3.csv', index_col = 0) #on importe depuis le csv cat 3 \n",
+    "dataframe_cat3\n",
+    "# on va attaquer la 4ème itération\n",
+    "listing_categories_cat4=[]\n",
+    "for i in range(len(dataframe_cat3)) :\n",
+    "    browser.get(dataframe_cat3['url'][i])\n",
+    "    html_page_listing = browser.page_source # permet de prendre le code html de la page \n",
+    "    soup = BeautifulSoup(html_page_listing , 'lxml') # créer la soupe avec le parser\n",
+    "    categories = soup.find_all('li'  , class_ = 'a-spacing-micro apb-browse-refinements-indent-2')\n",
+    "    # première descente des catégories simple il suffit de le la première page pas de boucle\n",
+    "    if categories == [] : \n",
+    "        listing_categories_cat4.append([dataframe_cat3['cat 1'][i],dataframe_cat3['cat 2'][i],dataframe_cat3['cat 3'][i],0,0,\"finale\",lien]) \n",
+    "    for categorie in categories :  \n",
+    "        categor = categorie.span.text.strip()\n",
+    "        lien = 'https://www.amazon.com'+ categorie.a.get('href')\n",
+    "        listing_categories_cat4.append([dataframe_cat3['cat 1'][i],dataframe_cat3['cat 2'][i],dataframe_cat3['cat 3'],categor,0,0,lien]) \n",
+    "dataframe_cat4 = pd.DataFrame(listing_categories_cat4,columns= index)\n",
+    "dataframe_cat4.to_csv('categories_cat4.csv')\n",
+    "dataframe_cat4"
    ]
   },
   {
